# ThirdSpace

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  openrouter.rs  prompt.rs
ui/: settings.html  settings.js  toast.html  toast.js
